<?xml version="1.0" encoding="UTF-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true">

  <com.cz.android.exoplayer.VideoSurfaceView
      android:id="@+id/surface_view"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_gravity="center"/>

  <TextView android:id="@+id/subtitles"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center|bottom"
      android:paddingLeft="8dp"
      android:paddingRight="8dp"
      android:paddingBottom="32dp"
      android:gravity="center"
      android:textSize="20sp"
      android:visibility="invisible"/>

  <View android:id="@+id/shutter"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@android:color/black"/>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="#88000000"
      android:orientation="vertical">

    <TextView android:id="@+id/player_state_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:textSize="10sp"/>

    <TextView android:id="@+id/debug_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:textSize="10sp"/>

    <LinearLayout android:id="@+id/controls_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

      <Button android:id="@+id/video_controls"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/video"
          android:visibility="gone"
          android:onClick="showVideoPopup"/>

      <Button android:id="@+id/audio_controls"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/audio"
          android:visibility="gone"
          android:onClick="showAudioPopup"/>

      <Button android:id="@+id/text_controls"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/text"
          android:visibility="gone"
          android:onClick="showTextPopup"/>

      <Button android:id="@+id/verbose_log_controls"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/logging"
          android:onClick="showVerboseLogPopup"/>

      <Button android:id="@+id/retry_button"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/retry"
          android:visibility="gone" />

    </LinearLayout>

  </LinearLayout>

</FrameLayout>
